@@ -1,4 +1,5 @@
 HEAD
+	+ Set OpenChange as not provisioned when Samba is reprovisioned
 	+ Clean up openchange section in stub smb.conf file
 	+ Fix typo in SambaLdapUser that fixes error in change email
 	+ Change user modification hook from _modifyUser to _preModifyUser
